# madissues-backend

./: .gitignore  coverage.xml  docker-compose.yaml  pom.xml  pyproject.toml
.scannerwork/: report-task.txt
images/: Dockerfile
madissues_backend/.scannerwork/: report-task.txt
madissues_backend/apps/rest_api/: dependencies.py  main.py
madissues_backend/apps/rest_api/tests/: test_end_to_end.py  test_end_to_end_student.py
madissues_backend/apps/rest_api/v1/: faqs.py  issue_comments.py  issues.py  organizations.py  owners.py  students.py  task_manager.py
madissues_backend/core/faqs/domain/: faq.py
madissues_backend/core/issues/domain/: issue.py  issue_comment.py  issue_comments.py  issue_mother.py
madissues_backend/core/organizations/domain/: organization.py  organization_course.py  organization_degree.py  organization_mother.py  organization_task_manager.py  organization_teacher.py  organization_teachers.py
madissues_backend/core/owners/domain/: owner.py  owner_email_updated.py  owner_mother.py  owner_task_manager.py
madissues_backend/core/owners/tests/: object_mothers.py
madissues_backend/core/shared/application/: authentication_service.py  authenticator_service.py  command.py  event_bus.py  event_handler.py  mock_repository.py  query.py  repository.py  task_manager_service.py
madissues_backend/db_snapshots/: mock_credentials.txt  with_organization_created.pkl  with_owner_created.pkl  with_student_created.pkl  with_task_managers_table.pkl
madissues_backend/db_snapshots/snapshots_mother/: snapshots_mother.py
src/test/java/: RunAllTests.java
(+285 files in other folders)
