[tool.poetry]
name = "madissues-backend"
version = "0.1.0"
description = ""
authors = ["josericardopenase <josericardopenase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mypy = "^1.9.0"
coverage = "^7.5.0"
pytest = "^8.1.1"
an = "^0.0.7"
requests = "^2.31.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
